--- a/src/i18n/locales/hi/common.json
+++ b/src/i18n/locales/hi/common.json
@@ -78,7 +78,7 @@
 		"custom_storage_path_set": "कस्टम स्टोरेज पाथ सेट किया गया: {{path}}",
 		"default_storage_path": "डिफ़ॉल्ट स्टोरेज पाथ का उपयोग पुनः शुरू किया गया",
 		"settings_imported": "सेटिंग्स सफलतापूर्वक इम्पोर्ट की गईं।",
-		"share_link_copied": "साझा लिंक क्लिपबोर्ड पर कॉपी किया गया!"
+		"share_link_copied": "साझा लिंक क्लिपबोर्ड पर कॉपी किया गया"
 	},
 	"answers": {
 		"yes": "हां",
