--- a/src/i18n/locales/it/common.json
+++ b/src/i18n/locales/it/common.json
@@ -78,7 +78,7 @@
 		"custom_storage_path_set": "Percorso di archiviazione personalizzato impostato: {{path}}",
 		"default_storage_path": "Tornato al percorso di archiviazione predefinito",
 		"settings_imported": "Impostazioni importate con successo.",
-		"share_link_copied": "Link di condivisione copiato negli appunti!"
+		"share_link_copied": "Link di condivisione copiato negli appunti"
 	},
 	"answers": {
 		"yes": "Sì",
