--- a/src/i18n/locales/ca/common.json
+++ b/src/i18n/locales/ca/common.json
@@ -82,7 +82,7 @@
 		"custom_storage_path_set": "Ruta d'emmagatzematge personalitzada establerta: {{path}}",
 		"default_storage_path": "S'ha reprès l'ús de la ruta d'emmagatzematge predeterminada",
 		"settings_imported": "Configuració importada correctament.",
-		"share_link_copied": "Enllaç de compartició copiat al portapapers!"
+		"share_link_copied": "Enllaç de compartició copiat al portapapers"
 	},
 	"answers": {
 		"yes": "Sí",
