--- a/src/i18n/locales/de/common.json
+++ b/src/i18n/locales/de/common.json
@@ -78,7 +78,7 @@
 		"custom_storage_path_set": "Benutzerdefinierter Speicherpfad festgelegt: {{path}}",
 		"default_storage_path": "Auf Standardspeicherpfad zurückgesetzt",
 		"settings_imported": "Einstellungen erfolgreich importiert.",
-		"share_link_copied": "Share-Link in die Zwischenablage kopiert!"
+		"share_link_copied": "Share-Link in die Zwischenablage kopiert"
 	},
 	"answers": {
 		"yes": "Ja",
