--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -78,7 +78,7 @@
 		"custom_storage_path_set": "Chemin de stockage personnalisé défini : {{path}}",
 		"default_storage_path": "Retour au chemin de stockage par défaut",
 		"settings_imported": "Paramètres importés avec succès.",
-		"share_link_copied": "Lien de partage copié dans le presse-papiers !"
+		"share_link_copied": "Lien de partage copié dans le presse-papiers"
 	},
 	"answers": {
 		"yes": "Oui",
