--- a/src/i18n/locales/zh-TW/common.json
+++ b/src/i18n/locales/zh-TW/common.json
@@ -78,7 +78,7 @@
 		"custom_storage_path_set": "自訂儲存路徑已設定：{{path}}",
 		"default_storage_path": "已恢復使用預設儲存路徑",
 		"settings_imported": "設定已成功匯入。",
-		"share_link_copied": "分享連結已複製到剪貼簿！"
+		"share_link_copied": "分享連結已複製到剪貼簿"
 	},
 	"answers": {
 		"yes": "是",
