Add max tokens checkbox option for OpenAI compatible provider
- Add checkbox control to enable/disable max tokens in API requests
- Update OpenAI compatible provider UI with max tokens option
- Add test coverage for the new max tokens functionality
- Update localization files across all supported languages

--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -601,5 +601,7 @@
 	"labels": {
 		"customArn": "Custom ARN",
 		"useCustomArn": "Use custom ARN..."
-	}
+	},
+	"includeMaxOutputTokens": "Include Max Output Tokens",
+	"includeMaxOutputTokensDescription": "Send max output tokens parameter in API requests. Some providers may not support this."
 }
