--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -601,5 +601,7 @@
 	"labels": {
 		"customArn": "Пользовательский ARN",
 		"useCustomArn": "Использовать пользовательский ARN..."
-	}
+	},
+	"includeMaxOutputTokens": "Включить максимальные выходные токены",
+	"includeMaxOutputTokensDescription": "Отправлять параметр максимальных выходных токенов в API-запросах. Некоторые провайдеры могут не поддерживать это."
 }
