fix: i18n error messages

--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "ARN personalitzat",
-		"useCustomArn": "Utilitza ARN personalitzat..."
+		"useCustomArn": "Utilitza ARN personalitzat...",
+		"invalidModel": "(invàlid)"
 	}
 }
