--- a/webview-ui/src/i18n/locales/de/settings.json
+++ b/webview-ui/src/i18n/locales/de/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "Benutzerdefinierte ARN",
-		"useCustomArn": "Benutzerdefinierte ARN verwenden..."
+		"useCustomArn": "Benutzerdefinierte ARN verwenden...",
+		"invalidModel": "(ungültig)"
 	}
 }
