--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "Custom ARN",
-		"useCustomArn": "Use custom ARN..."
+		"useCustomArn": "Use custom ARN...",
+		"invalidModel": "(invalid)"
 	}
 }
