--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "कस्टम ARN",
-		"useCustomArn": "कस्टम ARN का उपयोग करें..."
+		"useCustomArn": "कस्टम ARN का उपयोग करें...",
+		"invalidModel": "(अमान्य)"
 	}
 }
