--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "ARN personalizzato",
-		"useCustomArn": "Usa ARN personalizzato..."
+		"useCustomArn": "Usa ARN personalizzato...",
+		"invalidModel": "(non valido)"
 	}
 }
