--- a/webview-ui/src/i18n/locales/nl/settings.json
+++ b/webview-ui/src/i18n/locales/nl/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "Aangepaste ARN",
-		"useCustomArn": "Aangepaste ARN gebruiken..."
+		"useCustomArn": "Aangepaste ARN gebruiken...",
+		"invalidModel": "(ongeldig)"
 	}
 }
