--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "Niestandardowy ARN",
-		"useCustomArn": "Użyj niestandardowego ARN..."
+		"useCustomArn": "Użyj niestandardowego ARN...",
+		"invalidModel": "(nieprawidłowy)"
 	}
 }
