--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "Пользовательский ARN",
-		"useCustomArn": "Использовать пользовательский ARN..."
+		"useCustomArn": "Использовать пользовательский ARN...",
+		"invalidModel": "(недействительный)"
 	}
 }
