--- a/webview-ui/src/i18n/locales/tr/settings.json
+++ b/webview-ui/src/i18n/locales/tr/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "Özel ARN",
-		"useCustomArn": "Özel ARN kullan..."
+		"useCustomArn": "Özel ARN kullan...",
+		"invalidModel": "(geçersiz)"
 	}
 }
