--- a/webview-ui/src/i18n/locales/pt-BR/settings.json
+++ b/webview-ui/src/i18n/locales/pt-BR/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "ARN personalizado",
-		"useCustomArn": "Usar ARN personalizado..."
+		"useCustomArn": "Usar ARN personalizado...",
+		"invalidModel": "(inválido)"
 	}
 }
