--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -600,6 +600,7 @@
 	},
 	"labels": {
 		"customArn": "自訂 ARN",
-		"useCustomArn": "使用自訂 ARN..."
+		"useCustomArn": "使用自訂 ARN...",
+		"invalidModel": "(無效)"
 	}
 }
