refactor: remove invalid label, redundant

--- a/webview-ui/src/i18n/locales/de/settings.json
+++ b/webview-ui/src/i18n/locales/de/settings.json
@@ -600,7 +600,6 @@
 	},
 	"labels": {
 		"customArn": "Benutzerdefinierte ARN",
-		"useCustomArn": "Benutzerdefinierte ARN verwenden...",
-		"invalidModel": "(ungültig)"
+		"useCustomArn": "Benutzerdefinierte ARN verwenden..."
 	}
 }
