--- a/webview-ui/src/i18n/locales/es/settings.json
+++ b/webview-ui/src/i18n/locales/es/settings.json
@@ -600,7 +600,6 @@
 	},
 	"labels": {
 		"customArn": "ARN personalizado",
-		"useCustomArn": "Usar ARN personalizado...",
-		"invalidModel": "(inválido)"
+		"useCustomArn": "Usar ARN personalizado..."
 	}
 }
