--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -600,7 +600,6 @@
 	},
 	"labels": {
 		"customArn": "Niestandardowy ARN",
-		"useCustomArn": "Użyj niestandardowego ARN...",
-		"invalidModel": "(nieprawidłowy)"
+		"useCustomArn": "Użyj niestandardowego ARN..."
 	}
 }
