--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -600,7 +600,6 @@
 	},
 	"labels": {
 		"customArn": "自定义 ARN",
-		"useCustomArn": "使用自定义 ARN...",
-		"invalidModel": "(无效)"
+		"useCustomArn": "使用自定义 ARN..."
 	}
 }
