--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -600,7 +600,6 @@
 	},
 	"labels": {
 		"customArn": "ARN personalitzat",
-		"useCustomArn": "Utilitza ARN personalitzat...",
-		"invalidModel": "(invàlid)"
+		"useCustomArn": "Utilitza ARN personalitzat..."
 	}
 }
