--- a/webview-ui/src/i18n/locales/fr/settings.json
+++ b/webview-ui/src/i18n/locales/fr/settings.json
@@ -600,7 +600,6 @@
 	},
 	"labels": {
 		"customArn": "ARN personnalisé",
-		"useCustomArn": "Utiliser un ARN personnalisé...",
-		"invalidModel": "(invalide)"
+		"useCustomArn": "Utiliser un ARN personnalisé..."
 	}
 }
