--- a/webview-ui/src/i18n/locales/vi/settings.json
+++ b/webview-ui/src/i18n/locales/vi/settings.json
@@ -600,7 +600,6 @@
 	},
 	"labels": {
 		"customArn": "ARN tùy chỉnh",
-		"useCustomArn": "Sử dụng ARN tùy chỉnh...",
-		"invalidModel": "(không hợp lệ)"
+		"useCustomArn": "Sử dụng ARN tùy chỉnh..."
 	}
 }
