--- a/webview-ui/src/i18n/locales/hi/marketplace.json
+++ b/webview-ui/src/i18n/locales/hi/marketplace.json
@@ -17,7 +17,7 @@
 			"label": "प्रकार के अनुसार फ़िल्टर करें:",
 			"all": "सभी प्रकार",
 			"mode": "मोड",
-			"mcp server": "MCP सर्वर"
+			"mcpServer": "MCP सर्वर"
 		},
 		"sort": {
 			"label": "इसके अनुसार क्रमबद्ध करें:",
