--- a/webview-ui/src/i18n/locales/ru/marketplace.json
+++ b/webview-ui/src/i18n/locales/ru/marketplace.json
@@ -17,7 +17,7 @@
 			"label": "Фильтр по типу:",
 			"all": "Все типы",
 			"mode": "Режим",
-			"mcp server": "MCP сервер"
+			"mcpServer": "MCP сервер"
 		},
 		"sort": {
 			"label": "Сортировать по:",
