--- a/webview-ui/src/i18n/locales/tr/marketplace.json
+++ b/webview-ui/src/i18n/locales/tr/marketplace.json
@@ -17,7 +17,7 @@
 			"label": "Türe göre filtrele:",
 			"all": "Tüm türler",
 			"mode": "Mod",
-			"mcp server": "MCP Sunucusu"
+			"mcpServer": "MCP Sunucusu"
 		},
 		"sort": {
 			"label": "Sırala:",
