--- a/src/i18n/locales/ca/marketplace.json
+++ b/src/i18n/locales/ca/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Tipus",
 			"all": "Tots els tipus",
 			"mode": "Mode",
-			"mcp server": "Servidor MCP"
+			"mcpServer": "Servidor MCP"
 		},
 		"sort": {
 			"label": "Ordenar per",
@@ -59,5 +59,10 @@
 		"removing": "Eliminant element: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" eliminat correctament",
 		"removeError": "Error en eliminar \"{{itemName}}\": {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Si us plau, proporciona un valor per a {{paramName}}"
+		}
 	}
 }
