--- a/src/i18n/locales/de/marketplace.json
+++ b/src/i18n/locales/de/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Typ",
 			"all": "Alle Typen",
 			"mode": "Modus",
-			"mcp server": "MCP-Server"
+			"mcpServer": "MCP-Server"
 		},
 		"sort": {
 			"label": "Sortieren nach",
@@ -59,5 +59,10 @@
 		"removing": "Element wird entfernt: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" erfolgreich entfernt",
 		"removeError": "Entfernung von \"{{itemName}}\" fehlgeschlagen: {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Bitte gib einen Wert für {{paramName}} an"
+		}
 	}
 }
