--- a/src/i18n/locales/es/marketplace.json
+++ b/src/i18n/locales/es/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Tipo",
 			"all": "Todos los tipos",
 			"mode": "Modo",
-			"mcp server": "Servidor MCP"
+			"mcpServer": "Servidor MCP"
 		},
 		"sort": {
 			"label": "Ordenar por",
@@ -59,5 +59,10 @@
 		"removing": "Eliminando elemento: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" eliminado correctamente",
 		"removeError": "Error al eliminar \"{{itemName}}\": {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Por favor proporciona un valor para {{paramName}}"
+		}
 	}
 }
