--- a/src/i18n/locales/fr/marketplace.json
+++ b/src/i18n/locales/fr/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Type",
 			"all": "Tous les types",
 			"mode": "Mode",
-			"mcp server": "Serveur MCP"
+			"mcpServer": "Serveur MCP"
 		},
 		"sort": {
 			"label": "Trier par",
@@ -59,5 +59,10 @@
 		"removing": "Suppression de l'élément : \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" supprimé avec succès",
 		"removeError": "Échec de la suppression de \"{{itemName}}\" : {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Veuillez fournir une valeur pour {{paramName}}"
+		}
 	}
 }
