--- a/src/i18n/locales/hi/marketplace.json
+++ b/src/i18n/locales/hi/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "प्रकार",
 			"all": "सभी प्रकार",
 			"mode": "मोड",
-			"mcp server": "MCP सर्वर"
+			"mcpServer": "MCP सर्वर"
 		},
 		"sort": {
 			"label": "इसके द्वारा क्रमबद्ध करें",
@@ -59,5 +59,10 @@
 		"removing": "आइटम हटा रहे हैं: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" सफलतापूर्वक हटाया गया",
 		"removeError": "\"{{itemName}}\" हटाने में विफल: {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "कृपया {{paramName}} के लिए एक मान प्रदान करें"
+		}
 	}
 }
