--- a/src/i18n/locales/it/marketplace.json
+++ b/src/i18n/locales/it/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Tipo",
 			"all": "Tutti i tipi",
 			"mode": "Modalità",
-			"mcp server": "Server MCP"
+			"mcpServer": "Server MCP"
 		},
 		"sort": {
 			"label": "Ordina per",
@@ -59,5 +59,10 @@
 		"removing": "Rimozione elemento: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" rimosso con successo",
 		"removeError": "Rimozione di \"{{itemName}}\" fallita: {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Si prega di fornire un valore per {{paramName}}"
+		}
 	}
 }
