--- a/src/i18n/locales/ja/marketplace.json
+++ b/src/i18n/locales/ja/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "タイプ",
 			"all": "すべてのタイプ",
 			"mode": "モード",
-			"mcp server": "MCPサーバー"
+			"mcpServer": "MCPサーバー"
 		},
 		"sort": {
 			"label": "並び替え",
@@ -59,5 +59,10 @@
 		"removing": "アイテムを削除中: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\"の削除が完了しました",
 		"removeError": "\"{{itemName}}\"の削除に失敗しました: {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "{{paramName}}の値を入力してください"
+		}
 	}
 }
