--- a/src/i18n/locales/ko/marketplace.json
+++ b/src/i18n/locales/ko/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "유형",
 			"all": "모든 유형",
 			"mode": "모드",
-			"mcp server": "MCP 서버"
+			"mcpServer": "MCP 서버"
 		},
 		"sort": {
 			"label": "정렬 기준",
@@ -59,5 +59,10 @@
 		"removing": "항목 제거 중: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" 제거 완료",
 		"removeError": "\"{{itemName}}\" 제거 실패: {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "{{paramName}}에 대한 값을 입력해 주세요"
+		}
 	}
 }
