--- a/src/i18n/locales/nl/marketplace.json
+++ b/src/i18n/locales/nl/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Type",
 			"all": "Alle types",
 			"mode": "Modus",
-			"mcp server": "MCP Server"
+			"mcpServer": "MCP Server"
 		},
 		"sort": {
 			"label": "Sorteren op",
@@ -59,5 +59,10 @@
 		"removing": "Item verwijderen: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" succesvol verwijderd",
 		"removeError": "Verwijdering van \"{{itemName}}\" mislukt: {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Geef een waarde op voor {{paramName}}"
+		}
 	}
 }
