--- a/src/i18n/locales/pl/marketplace.json
+++ b/src/i18n/locales/pl/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Typ",
 			"all": "Wszystkie typy",
 			"mode": "Tryb",
-			"mcp server": "Serwer MCP"
+			"mcpServer": "Serwer MCP"
 		},
 		"sort": {
 			"label": "Sortuj według",
@@ -59,5 +59,10 @@
 		"removing": "Usuwanie elementu: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" usunięto pomyślnie",
 		"removeError": "Usunięcie \"{{itemName}}\" nie powiodło się: {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Podaj wartość dla {{paramName}}"
+		}
 	}
 }
