--- a/src/i18n/locales/pt-BR/marketplace.json
+++ b/src/i18n/locales/pt-BR/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Tipo",
 			"all": "Todos os tipos",
 			"mode": "Modo",
-			"mcp server": "Servidor MCP"
+			"mcpServer": "Servidor MCP"
 		},
 		"sort": {
 			"label": "Ordenar por",
@@ -59,5 +59,10 @@
 		"removing": "Removendo item: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" removido com sucesso",
 		"removeError": "Falha ao remover \"{{itemName}}\": {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Por favor, forneça um valor para {{paramName}}"
+		}
 	}
 }
