--- a/src/i18n/locales/ru/marketplace.json
+++ b/src/i18n/locales/ru/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Тип",
 			"all": "Все типы",
 			"mode": "Режим",
-			"mcp server": "MCP сервер"
+			"mcpServer": "MCP сервер"
 		},
 		"sort": {
 			"label": "Сортировать по",
@@ -59,5 +59,10 @@
 		"removing": "Удаление элемента: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" успешно удален",
 		"removeError": "Не удалось удалить \"{{itemName}}\": {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Пожалуйста, укажите значение для {{paramName}}"
+		}
 	}
 }
