--- a/src/i18n/locales/tr/marketplace.json
+++ b/src/i18n/locales/tr/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Tür",
 			"all": "Tüm Türler",
 			"mode": "Mod",
-			"mcp server": "MCP Sunucusu"
+			"mcpServer": "MCP Sunucusu"
 		},
 		"sort": {
 			"label": "Sırala",
@@ -59,5 +59,10 @@
 		"removing": "Öğe kaldırılıyor: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" başarıyla kaldırıldı",
 		"removeError": "\"{{itemName}}\" kaldırılamadı: {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Lütfen {{paramName}} için bir değer girin"
+		}
 	}
 }
