--- a/src/i18n/locales/vi/marketplace.json
+++ b/src/i18n/locales/vi/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "Loại",
 			"all": "Tất cả loại",
 			"mode": "Chế độ",
-			"mcp server": "Máy chủ MCP"
+			"mcpServer": "Máy chủ MCP"
 		},
 		"sort": {
 			"label": "Sắp xếp theo",
@@ -59,5 +59,10 @@
 		"removing": "Đang xóa mục: \"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" đã được xóa thành công",
 		"removeError": "Xóa \"{{itemName}}\" thất bại: {{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "Vui lòng cung cấp giá trị cho {{paramName}}"
+		}
 	}
 }
