--- a/src/i18n/locales/zh-CN/marketplace.json
+++ b/src/i18n/locales/zh-CN/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "类型",
 			"all": "所有类型",
 			"mode": "模式",
-			"mcp server": "MCP 服务"
+			"mcpServer": "MCP 服务"
 		},
 		"sort": {
 			"label": "排序方式",
@@ -59,5 +59,10 @@
 		"removing": "正在移除项目：\"{{itemName}}\"",
 		"removeSuccess": "\"{{itemName}}\" 移除成功",
 		"removeError": "\"{{itemName}}\" 移除失败：{{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "请为 {{paramName}} 提供值"
+		}
 	}
 }
