--- a/src/i18n/locales/zh-TW/marketplace.json
+++ b/src/i18n/locales/zh-TW/marketplace.json
@@ -24,7 +24,7 @@
 			"label": "類型",
 			"all": "所有類型",
 			"mode": "模式",
-			"mcp server": "MCP 伺服器"
+			"mcpServer": "MCP 伺服器"
 		},
 		"sort": {
 			"label": "排序方式",
@@ -59,5 +59,10 @@
 		"removing": "正在移除項目：「{{itemName}}」",
 		"removeSuccess": "「{{itemName}}」移除成功",
 		"removeError": "「{{itemName}}」移除失敗：{{errorMessage}}"
+	},
+	"install": {
+		"validation": {
+			"required": "請為 {{paramName}} 提供值"
+		}
 	}
 }
