--- a/webview-ui/src/i18n/locales/fr/marketplace.json
+++ b/webview-ui/src/i18n/locales/fr/marketplace.json
@@ -17,7 +17,7 @@
 			"label": "Filtrer par type :",
 			"all": "Tous les types",
 			"mode": "Mode",
-			"mcp server": "Serveur MCP"
+			"mcpServer": "Serveur MCP"
 		},
 		"sort": {
 			"label": "Trier par :",
