--- a/webview-ui/src/i18n/locales/it/marketplace.json
+++ b/webview-ui/src/i18n/locales/it/marketplace.json
@@ -17,7 +17,7 @@
 			"label": "Filtra per tipo:",
 			"all": "Tutti i tipi",
 			"mode": "Modalità",
-			"mcp server": "Server MCP"
+			"mcpServer": "Server MCP"
 		},
 		"sort": {
 			"label": "Ordina per:",
