--- a/webview-ui/src/i18n/locales/nl/marketplace.json
+++ b/webview-ui/src/i18n/locales/nl/marketplace.json
@@ -17,7 +17,7 @@
 			"label": "Filteren op type:",
 			"all": "Alle types",
 			"mode": "Modus",
-			"mcp server": "MCP-server"
+			"mcpServer": "MCP-server"
 		},
 		"sort": {
 			"label": "Sorteren op:",
