--- a/webview-ui/src/i18n/locales/vi/marketplace.json
+++ b/webview-ui/src/i18n/locales/vi/marketplace.json
@@ -92,7 +92,8 @@
 		"done": "Hoàn thành",
 		"goToMcp": "Đi đến Tab MCP",
 		"goToModes": "Đi đến Tab Chế độ",
-		"moreInfoMcp": "Xem tài liệu MCP {{name}}"
+		"moreInfoMcp": "Xem tài liệu MCP {{name}}",
+		"validationRequired": "Vui lòng cung cấp giá trị cho {{paramName}}"
 	},
 	"sources": {
 		"title": "Cấu hình Nguồn Marketplace",
