--- a/webview-ui/src/i18n/locales/fr/marketplace.json
+++ b/webview-ui/src/i18n/locales/fr/marketplace.json
@@ -92,7 +92,8 @@
 		"done": "Terminé",
 		"goToMcp": "Aller à l'onglet MCP",
 		"goToModes": "Aller à l'onglet Modes",
-		"moreInfoMcp": "Voir la documentation MCP de {{name}}"
+		"moreInfoMcp": "Voir la documentation MCP de {{name}}",
+		"validationRequired": "Veuillez fournir une valeur pour {{paramName}}"
 	},
 	"sources": {
 		"title": "Configurer les sources du marketplace",
