--- a/webview-ui/src/i18n/locales/ru/marketplace.json
+++ b/webview-ui/src/i18n/locales/ru/marketplace.json
@@ -92,7 +92,8 @@
 		"done": "Готово",
 		"goToMcp": "Перейти во вкладку MCP",
 		"goToModes": "Перейти во вкладку Режимы",
-		"moreInfoMcp": "Просмотреть документацию MCP {{name}}"
+		"moreInfoMcp": "Просмотреть документацию MCP {{name}}",
+		"validationRequired": "Пожалуйста, укажите значение для {{paramName}}"
 	},
 	"sources": {
 		"title": "Настроить источники marketplace",
