--- a/webview-ui/src/i18n/locales/tr/marketplace.json
+++ b/webview-ui/src/i18n/locales/tr/marketplace.json
@@ -92,7 +92,8 @@
 		"done": "Tamamlandı",
 		"goToMcp": "MCP Sekmesine Git",
 		"goToModes": "Modlar Sekmesine Git",
-		"moreInfoMcp": "{{name}} MCP belgelerini görüntüle"
+		"moreInfoMcp": "{{name}} MCP belgelerini görüntüle",
+		"validationRequired": "Lütfen {{paramName}} için bir değer sağlayın"
 	},
 	"sources": {
 		"title": "Marketplace Kaynaklarını Yapılandır",
