--- a/webview-ui/src/i18n/locales/zh-TW/marketplace.json
+++ b/webview-ui/src/i18n/locales/zh-TW/marketplace.json
@@ -92,7 +92,8 @@
 		"done": "完成",
 		"goToMcp": "前往 MCP 標籤頁",
 		"goToModes": "前往模式標籤頁",
-		"moreInfoMcp": "檢視 {{name}} MCP 文件"
+		"moreInfoMcp": "檢視 {{name}} MCP 文件",
+		"validationRequired": "請為 {{paramName}} 提供值"
 	},
 	"sources": {
 		"title": "設定 Marketplace 來源",
