--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -494,8 +494,8 @@
 			"description": "Quando abilitato, Roo può leggere più file in una singola richiesta. Quando disabilitato, Roo deve leggere i file uno alla volta. Disabilitarlo può aiutare quando si lavora con modelli meno capaci o quando si desidera maggiore controllo sull'accesso ai file."
 		},
 		"MARKETPLACE": {
-			"name": "Abilita Marketplace in Roo Code",
-			"description": "Quando abilitato, Roo sarà in grado di installare e gestire elementi dal Marketplace."
+			"name": "Abilita Marketplace",
+			"description": "Quando abilitato, puoi installare MCP e modalità personalizzate dal Marketplace."
 		},
 		"DISABLE_COMPLETION_COMMAND": {
 			"name": "Disabilita l'esecuzione dei comandi in attempt_completion",
