--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -494,8 +494,8 @@
 			"description": "啟用後，Roo 可以在單一請求中讀取多個檔案（最多 15 個檔案）。停用後，Roo 必須逐一讀取檔案。在使用能力較弱的模型或希望對檔案存取有更多控制時，停用此功能可能會有所幫助。"
 		},
 		"MARKETPLACE": {
-			"name": "啟用 Roo Code 中的 Marketplace",
-			"description": "啟用後，Roo 將能夠安裝和管理 Marketplace 中的項目。"
+			"name": "啟用 Marketplace",
+			"description": "啟用後，您可以從 Marketplace 安裝 MCP 和自訂模式。"
 		},
 		"DISABLE_COMPLETION_COMMAND": {
 			"name": "停用 attempt_completion 中的指令執行",
