--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -494,8 +494,8 @@
 			"description": "Quan està habilitat, Roo pot llegir múltiples fitxers en una sola sol·licitud. Quan està deshabilitat, Roo ha de llegir fitxers un per un. Deshabilitar-ho pot ajudar quan es treballa amb models menys capaços o quan voleu més control sobre l'accés als fitxers."
 		},
 		"MARKETPLACE": {
-			"name": "Habilitar Marketplace a Roo Code",
-			"description": "Quan està habilitat, Roo podrà instal·lar i gestionar elements del Marketplace."
+			"name": "Habilitar Marketplace",
+			"description": "Quan està habilitat, pots instal·lar MCP i modes personalitzats del Marketplace."
 		},
 		"DISABLE_COMPLETION_COMMAND": {
 			"name": "Desactivar l'execució de comandes a attempt_completion",
