--- a/webview-ui/src/i18n/locales/de/settings.json
+++ b/webview-ui/src/i18n/locales/de/settings.json
@@ -494,8 +494,8 @@
 			"description": "Wenn aktiviert, kann Roo mehrere Dateien in einer einzigen Anfrage lesen. Wenn deaktiviert, muss Roo Dateien nacheinander lesen. Das Deaktivieren kann helfen, wenn du mit weniger leistungsfähigen Modellen arbeitest oder mehr Kontrolle über den Dateizugriff möchtest."
 		},
 		"MARKETPLACE": {
-			"name": "Marketplace in Roo Code aktivieren",
-			"description": "Wenn aktiviert, kann Roo Elemente aus dem Marketplace installieren und verwalten."
+			"name": "Marketplace aktivieren",
+			"description": "Wenn aktiviert, kannst du MCP und benutzerdefinierte Modi aus dem Marketplace installieren und verwalten."
 		},
 		"DISABLE_COMPLETION_COMMAND": {
 			"name": "Befehlsausführung in attempt_completion deaktivieren",
