--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -494,8 +494,8 @@
 			"description": "When enabled, Roo will use multi block diff tool. This will try to update multiple code blocks in the file in one request."
 		},
 		"MARKETPLACE": {
-			"name": "Enable Marketplace in Roo Code",
-			"description": "When enabled, Roo will be able to install and manage items from the Marketplace."
+			"name": "Enable Marketplace",
+			"description": "When enabled, you can install MCPs and custom modes from the Marketplace."
 		},
 		"DISABLE_COMPLETION_COMMAND": {
 			"name": "Disable command execution in attempt_completion",
