--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -494,8 +494,8 @@
 			"description": "सक्षम होने पर, Roo एक ही अनुरोध में कई फ़ाइलें पढ़ सकता है अक्षम होने पर, Roo को एक बार में एक फ़ाइल पढ़नी होगी। कम सक्षम मॉडल के साथ काम करते समय या जब आप फ़ाइल एक्सेस पर अधिक नियंत्रण चाहते हैं तो इसे अक्षम करना मददगार हो सकता है।"
 		},
 		"MARKETPLACE": {
-			"name": "Roo Code में Marketplace सक्षम करें",
-			"description": "जब सक्षम होता है, तो Roo Marketplace से आइटम इंस्टॉल और प्रबंधित कर सकता है।"
+			"name": "Marketplace सक्षम करें",
+			"description": "जब सक्षम होता है, तो आप Marketplace से MCP और कस्टम मोड इंस्टॉल कर सकते हैं।"
 		},
 		"DISABLE_COMPLETION_COMMAND": {
 			"name": "attempt_completion में कमांड निष्पादन अक्षम करें",
