--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -494,8 +494,8 @@
 			"description": "有効にすると、Rooは1回のリクエストで複数のファイル を読み取ることができます。無効にすると、Rooはファイルを1つずつ読み取る必要があります。能力の低いモデルで作業する場合や、ファイルアクセスをより細かく制御したい場合は、無効にすると役立ちます。"
 		},
 		"MARKETPLACE": {
-			"name": "Roo CodeでMarketplaceを有効にする",
-			"description": "有効にすると、RooはMarketplaceからアイテムをインストールして管理できるようになります。"
+			"name": "Marketplaceを有効にする",
+			"description": "有効にすると、MarketplaceからMCPとカスタムモードをインストールできます。"
 		},
 		"DISABLE_COMPLETION_COMMAND": {
 			"name": "attempt_completionでのコマンド実行を無効にする",
