--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -494,8 +494,8 @@
 			"description": "활성화하면 Roo가 한 번의 요청으로 여러 파일 을 읽을 수 있습니다. 비활성화하면 Roo는 파일을 하나씩 읽어야 합니다. 성능이 낮은 모델로 작업하거나 파일 액세스를 더 제어하려는 경우 비활성화하면 도움이 될 수 있습니다."
 		},
 		"MARKETPLACE": {
-			"name": "Roo Code에서 Marketplace 활성화",
-			"description": "활성화하면 Roo가 Marketplace에서 아이템을 설치하고 관리할 수 있습니다."
+			"name": "Marketplace 활성화",
+			"description": "활성화하면 Marketplace에서 MCP와 사용자 정의 모드를 설치할 수 있습니다."
 		},
 		"DISABLE_COMPLETION_COMMAND": {
 			"name": "attempt_completion에서 명령 실행 비활성화",
