--- a/webview-ui/src/i18n/locales/nl/settings.json
+++ b/webview-ui/src/i18n/locales/nl/settings.json
@@ -494,8 +494,8 @@
 			"description": "Wanneer ingeschakeld, kan Roo meerdere bestanden in één verzoek lezen. Wanneer uitgeschakeld, moet Roo bestanden één voor één lezen. Uitschakelen kan helpen bij het werken met minder capabele modellen of wanneer u meer controle over bestandstoegang wilt."
 		},
 		"MARKETPLACE": {
-			"name": "Marketplace inschakelen in Roo Code",
-			"description": "Wanneer ingeschakeld, kan Roo items uit de Marketplace installeren en beheren."
+			"name": "Marketplace inschakelen",
+			"description": "Wanneer ingeschakeld kun je MCP's en aangepaste modi uit de Marketplace installeren."
 		},
 		"DISABLE_COMPLETION_COMMAND": {
 			"name": "Commando-uitvoering in attempt_completion uitschakelen",
