--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -498,8 +498,8 @@
 			"description": "Gdy włączone, narzędzie attempt_completion nie będzie wykonywać poleceń. Jest to funkcja eksperymentalna przygotowująca do przyszłego wycofania wykonywania poleceń po zakończeniu zadania."
 		},
 		"MARKETPLACE": {
-			"name": "Włącz marketplace",
-			"description": "Włącz dostęp do marketplace z dodatkowymi narzędziami i rozszerzeniami dla Roo Code."
+			"name": "Włącz Marketplace",
+			"description": "Gdy włączone, możesz instalować MCP i niestandardowe tryby z Marketplace."
 		}
 	},
 	"promptCaching": {
