--- a/webview-ui/src/i18n/locales/pt-BR/settings.json
+++ b/webview-ui/src/i18n/locales/pt-BR/settings.json
@@ -498,8 +498,8 @@
 			"description": "Quando ativado, a ferramenta attempt_completion não executará comandos. Este é um recurso experimental para preparar a futura descontinuação da execução de comandos na conclusão da tarefa."
 		},
 		"MARKETPLACE": {
-			"name": "Ativar marketplace",
-			"description": "Ativar acesso ao marketplace com ferramentas e extensões adicionais para o Roo Code."
+			"name": "Ativar Marketplace",
+			"description": "Quando ativado, você pode instalar MCPs e modos personalizados do Marketplace."
 		}
 	},
 	"promptCaching": {
