--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -498,8 +498,8 @@
 			"description": "Если включено, инструмент attempt_completion не будет выполнять команды. Это экспериментальная функция для подготовки к будущему прекращению поддержки выполнения команд при завершении задачи."
 		},
 		"MARKETPLACE": {
-			"name": "Включить marketplace",
-			"description": "Включить доступ к marketplace с дополнительными инструментами и расширениями для Roo Code."
+			"name": "Включить Marketplace",
+			"description": "Когда включено, вы можете устанавливать MCP и пользовательские режимы из Marketplace."
 		}
 	},
 	"promptCaching": {
