--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -494,8 +494,8 @@
 			"description": "启用后，Roo 可以在单个请求中读取多个文件。禁用后，Roo 必须逐个读取文件。在使用能力较弱的模型或希望对文件访问有更多控制时，禁用此功能可能会有所帮助。"
 		},
 		"MARKETPLACE": {
-			"name": "启用 Roo Code 中的 Marketplace",
-			"description": "启用后，Roo 将能够安装和管理 Marketplace 中的项目。"
+			"name": "启用 Marketplace",
+			"description": "启用后，你可以从 Marketplace 安装 MCP 和自定义模式。"
 		},
 		"DISABLE_COMPLETION_COMMAND": {
 			"name": "禁用 attempt_completion 中的命令执行",
