--- a/webview-ui/src/i18n/locales/ca/marketplace.json
+++ b/webview-ui/src/i18n/locales/ca/marketplace.json
@@ -93,7 +93,8 @@
 		"goToMcp": "Anar a la pestanya MCP",
 		"goToModes": "Anar a la pestanya Modes",
 		"moreInfoMcp": "Veure documentació MCP de {{name}}",
-		"validationRequired": "Si us plau, proporciona un valor per a {{paramName}}"
+		"validationRequired": "Si us plau, proporciona un valor per a {{paramName}}",
+		"prerequisites": "Prerequisits"
 	},
 	"sources": {
 		"title": "Configurar fonts del marketplace",
