--- a/webview-ui/src/i18n/locales/de/marketplace.json
+++ b/webview-ui/src/i18n/locales/de/marketplace.json
@@ -93,7 +93,8 @@
 		"goToMcp": "Zum MCP-Tab gehen",
 		"goToModes": "Zum Modi-Tab gehen",
 		"moreInfoMcp": "{{name}} MCP-Dokumentation anzeigen",
-		"validationRequired": "Bitte gib einen Wert für {{paramName}} an"
+		"validationRequired": "Bitte gib einen Wert für {{paramName}} an",
+		"prerequisites": "Voraussetzungen"
 	},
 	"sources": {
 		"title": "Marketplace-Quellen konfigurieren",
