--- a/webview-ui/src/i18n/locales/ja/marketplace.json
+++ b/webview-ui/src/i18n/locales/ja/marketplace.json
@@ -93,7 +93,8 @@
 		"goToMcp": "MCPタブに移動",
 		"goToModes": "モードタブに移動",
 		"moreInfoMcp": "{{name}} MCPドキュメントを表示",
-		"validationRequired": "{{paramName}}の値を入力してください"
+		"validationRequired": "{{paramName}}の値を入力してください",
+		"prerequisites": "前提条件"
 	},
 	"sources": {
 		"title": "Marketplaceソースを設定",
