--- a/webview-ui/src/i18n/locales/es/marketplace.json
+++ b/webview-ui/src/i18n/locales/es/marketplace.json
@@ -93,7 +93,8 @@
 		"goToMcp": "Ir a la pestaña MCP",
 		"goToModes": "Ir a la pestaña Modos",
 		"moreInfoMcp": "Ver documentación MCP de {{name}}",
-		"validationRequired": "Por favor proporciona un valor para {{paramName}}"
+		"validationRequired": "Por favor proporciona un valor para {{paramName}}",
+		"prerequisites": "Requisitos previos"
 	},
 	"sources": {
 		"title": "Configurar fuentes del marketplace",
