--- a/webview-ui/src/i18n/locales/fr/marketplace.json
+++ b/webview-ui/src/i18n/locales/fr/marketplace.json
@@ -93,7 +93,8 @@
 		"goToMcp": "Aller à l'onglet MCP",
 		"goToModes": "Aller à l'onglet Modes",
 		"moreInfoMcp": "Voir la documentation MCP de {{name}}",
-		"validationRequired": "Veuillez fournir une valeur pour {{paramName}}"
+		"validationRequired": "Veuillez fournir une valeur pour {{paramName}}",
+		"prerequisites": "Prérequis"
 	},
 	"sources": {
 		"title": "Configurer les sources du marketplace",
