--- a/webview-ui/src/i18n/locales/ko/marketplace.json
+++ b/webview-ui/src/i18n/locales/ko/marketplace.json
@@ -93,7 +93,8 @@
 		"goToMcp": "MCP 탭으로 이동",
 		"goToModes": "모드 탭으로 이동",
 		"moreInfoMcp": "{{name}} MCP 문서 보기",
-		"validationRequired": "{{paramName}}에 대한 값을 입력해주세요"
+		"validationRequired": "{{paramName}}에 대한 값을 입력해주세요",
+		"prerequisites": "전제 조건"
 	},
 	"sources": {
 		"title": "Marketplace 소스 설정",
