--- a/webview-ui/src/i18n/locales/ru/marketplace.json
+++ b/webview-ui/src/i18n/locales/ru/marketplace.json
@@ -93,7 +93,8 @@
 		"goToMcp": "Перейти во вкладку MCP",
 		"goToModes": "Перейти во вкладку Режимы",
 		"moreInfoMcp": "Просмотреть документацию MCP {{name}}",
-		"validationRequired": "Пожалуйста, укажите значение для {{paramName}}"
+		"validationRequired": "Пожалуйста, укажите значение для {{paramName}}",
+		"prerequisites": "Предварительные требования"
 	},
 	"sources": {
 		"title": "Настроить источники marketplace",
