--- a/webview-ui/src/i18n/locales/tr/marketplace.json
+++ b/webview-ui/src/i18n/locales/tr/marketplace.json
@@ -93,7 +93,8 @@
 		"goToMcp": "MCP Sekmesine Git",
 		"goToModes": "Modlar Sekmesine Git",
 		"moreInfoMcp": "{{name}} MCP belgelerini görüntüle",
-		"validationRequired": "Lütfen {{paramName}} için bir değer sağlayın"
+		"validationRequired": "Lütfen {{paramName}} için bir değer sağlayın",
+		"prerequisites": "Ön koşullar"
 	},
 	"sources": {
 		"title": "Marketplace Kaynaklarını Yapılandır",
