--- a/webview-ui/src/i18n/locales/zh-TW/marketplace.json
+++ b/webview-ui/src/i18n/locales/zh-TW/marketplace.json
@@ -93,7 +93,8 @@
 		"goToMcp": "前往 MCP 標籤頁",
 		"goToModes": "前往模式標籤頁",
 		"moreInfoMcp": "檢視 {{name}} MCP 文件",
-		"validationRequired": "請為 {{paramName}} 提供值"
+		"validationRequired": "請為 {{paramName}} 提供值",
+		"prerequisites": "前置條件"
 	},
 	"sources": {
 		"title": "設定 Marketplace 來源",
